# RMCV

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  main.cpp
aimer/auto_aim/detector/: CMakeLists.txt  detector_node.cpp
aimer/auto_aim/detector/common/: detector_interface.hpp  types.hpp
aimer/common/math/: math.hpp
aimer/common/transformer/: transformer.cpp  transformer.hpp
asset/: hardware.toml
config/: MV-CS016-10UC_DA5555190.mfs  aimer.toml  detector.toml  hardware.toml  test.toml
hardware/: CMakeLists.txt
hardware/hik_cam/: CMakeLists.txt  hik_camera.cpp  hik_camera.hpp  hik_log.hpp
hardware/serial/: CMakeLists.txt  fixed_packet.hpp  transceiver_manager.hpp
hardware/serial/protocol/: protocol_interface.hpp  uart_protocol.cpp  uart_protocol.hpp  usb_bulk_protocol.cpp  usb_bulk_protocol.hpp
plugin/: CMakeLists.txt
plugin/debug/: logger.hpp
plugin/param/: runtime_parameter.cpp  runtime_parameter.hpp  static_config.cpp  static_config.hpp
test/: test_param.cpp
umt/: Message.hpp  ObjManager.hpp  umt.hpp
